k8s/browserless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
spec:
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      name: browserless
      labels:
        app: browserless
    spec:
      containers:
        - name: browserless
          image: ghcr.io/browserless/chromium:v2.33.0
---
apiVersion: v1
kind: Service
metadata:
  name: browserless
spec:
  selector:
    app: browserless
  ports:
    - port: 3000
