k8s/big-agi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: big-agi
spec:
  selector:
    matchLabels:
      app: big-agi
  template:
    metadata:
      name: big-agi
      labels:
        app: big-agi
    spec:
      containers:
        - name: big-agi
          image: git.strypsteen.com/infra/big-agi
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: v1
kind: Service
metadata:
  name: big-agi
spec:
  selector:
    app: big-agi
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: big-agi
spec:
  ingressClassName: nginx
  rules:
    - host: llm.strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: big-agi
                port:
                  number: 3000
